k8s/07-ticket-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
  namespace: tiketi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
        - name: ticket-service
          image: tiketi-ticket-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: tiketi
spec:
  type: ClusterIP
  selector:
    app: ticket-service
  ports:
    - port: 3002
      targetPort: 3002
