k8s/08-payment-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: tiketi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: tiketi-payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: tiketi
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - port: 3003
      targetPort: 3003
