k8s/09-stats-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  namespace: tiketi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
        - name: stats-service
          image: tiketi-stats-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: stats-service
  namespace: tiketi
spec:
  type: ClusterIP
  selector:
    app: stats-service
  ports:
    - port: 3004
      targetPort: 3004
